add tests (#1163)
* allow java 17 in tests

Signed-off-by: Gregor Zeitlinger <gregor.zeitlinger@grafana.com>

* allow java 17 in tests

Signed-off-by: Gregor Zeitlinger <gregor.zeitlinger@grafana.com>

* add coverage

Signed-off-by: Gregor Zeitlinger <gregor.zeitlinger@grafana.com>

---------

Signed-off-by: Gregor Zeitlinger <gregor.zeitlinger@grafana.com>