@@ -3,7 +3,6 @@ package io.prometheus.metrics.config;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.HashMap;
 import java.util.Map;
 import org.junit.jupiter.api.Test;
@@ -12,11 +11,11 @@ class ExporterHttpServerPropertiesTest {
   @Test
   void load() {
     ExporterHttpServerProperties properties =
-        load(ImmutableMap.of("io.prometheus.exporter.httpServer.port", "1"));
+        load(Map.of("io.prometheus.exporter.httpServer.port", "1"));
     assertThat(properties.getPort()).isOne();
 
     assertThatExceptionOfType(PrometheusPropertiesException.class)
-        .isThrownBy(() -> load(ImmutableMap.of("io.prometheus.exporter.httpServer.port", "0")))
+        .isThrownBy(() -> load(Map.of("io.prometheus.exporter.httpServer.port", "0")))
         .withMessage("io.prometheus.exporter.httpServer.port: Expecting value > 0. Found: 0");
   }
 
